[package]
name = "noone"
version = "0.1.0"
authors = ["Mark Schott <schottm@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.2"
futures = "0.1"
num-bigint-dig = "0.4"
rsa = "0.1"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
specs = "0.14"
specs-derive = "0.4"
